# ConsolePauser

./: .gitignore  CMakeLists.txt  ConsolePauser.dev  LICENSE  README.md  main.c  pauser.cpp  test.py
.github/workflows/: build-release.yml
CodeBlocks/: .gitignore  ConsolePauser.cbp
DevCpp/: .gitignore  ConsolePauser.dev
